--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">CS496_02</string>
-    <string name="facebook_app_id">1719869615001204</string>
+    <string name="facebook_app_id">150617845358952</string>
     <string name="authority">com.facebook.app.FacebookContentProvider1719869615001204</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
